tests/contract_testcases/substrate/format/parse_06.sol

        contract c {
            function foo() public {
                string s = "f{{oo}}s".format(true);
            }
        }
// ---- Expect: diagnostics ----
// error: 4:28-51: too many argument for format string
